--- a/src/components/HeaderComponents/Header.css
+++ b/src/components/HeaderComponents/Header.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
 .header {
-  background: url("../assets/photo.png") center/cover no-repeat border-box, #ffff;
+  background: url("../../assets/photo.png") center/cover no-repeat border-box, #ffff;
   height: 65rem;
   z-index: -1;
   display: flex;
