--- a/src/components/PortfolioComponents/Portfolio.css
+++ b/src/components/PortfolioComponents/Portfolio.css
@@ -7,8 +7,8 @@
   transform: translateY(-15rem);
   margin: 0 8.75rem;
   display: flex;
-
   flex-direction: column;
+  border-left: 1px solid #ffff;
 }
 
 .ports {
@@ -22,6 +22,10 @@
   display: flex;
   flex-direction: column;
   border-left: 1px solid #ffff;
+}
+
+.port-1 {
+  border-left: none;
 }
 
 .port-3 {
@@ -53,4 +57,12 @@
 .port-3 li:last-of-type {
     border-bottom: none;
     margin-bottom: -4.3rem;
+}
+
+.about {
+  
+}
+
+.about h4 {
+
 }
