--- a/src/components/PortfolioComponents/Portfolio.css
+++ b/src/components/PortfolioComponents/Portfolio.css
@@ -1,6 +1,6 @@
 .container {
   height: auto;
-  background-color: rgba(0, 0, 0, 0.955);
+  background-color: #000000f4;
 }
 
 .portfolio-container {
