--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
 
 * {
-  /* background-color: #000000; */
+  background-color: transparent;
   box-sizing: border-box;
   color: #fefefe;
   padding: 0;
